# crypto_hft_bot

./: .dockerignore  .gitignore  CMakeLists.txt  docker-compose.yml  logger.cpp  logger.h  main.cpp  rest_api.cpp  rest_api.h  strategy.cpp  strategy.h  utils.cpp  utils.h  ws_client.cpp  ws_client.h
.devcontainer/: devcontainer.json
Dockerfiles/: dev  prod
